# pikuma3d

./: .gitignore  CMakeLists.txt  README.md
src/: display.c  display.h  main.c  mesh.c  mesh.h  triangle.c  triangle.h  vector.c  vector.h
